# Aind.Behavior.CurriculumTemplate

./: .flake8  README.md  pyproject.toml
src/aind_behavior_curriculum_template/: __init__.py  __main__.py  app.py  curriculum.py  main.py  metrics.py  task_logic.py  utils.py
