[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-curriculum-template"
description = "A template library for generating a curriculum to interface with aind-behavior-experiment-launcher. This library is intended to be used as a starting point for creating a new curriculum and to run unit tests."
authors = [ {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "aind-behavior-curriculum @ git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@3ce6ea71174d60224b6a87f6c8b3520af514238c",
    "click>=8.1.7",
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CurriculumTemplate/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CurriculumTemplate/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.CurriculumTemplate/releases"

[project.optional-dependencies]

dev = [
    "ruff",
    "codespell"
]

[project.scripts]
curriculum = "aind_behavior_curriculum_template.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_curriculum_template.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./docs/_build,uv.lock'
ignore-words-list = 'nd'

[tool.uv.sources]
aind-behavior-curriculum = { git = "https://github.com/AllenNeuralDynamics/aind-behavior-curriculum" }
